TASK: configure sentinel

--- a/tasks/install.yaml
+++ b/tasks/install.yaml
@@ -4,6 +4,16 @@
   apt:
     name: redis-server
 
+- name: Check for Sentinel Unit
+  stat:
+    path: /lib/systemd/system/redis-sentinel.service
+  register: redis_sentinel_unit
+  changed_when: false
+
+- name: Mask Sentinel Unit tp prevent Sentinel from starting directly after installation
+  when: not redis_sentinel_unit.stat.exists
+  command: systemctl mask redis-sentinel
+
 - name: Install Redis Sentinel
   when:
     - ansible_distribution == 'Ubuntu'
