--- a/handlers/main.yaml
+++ b/handlers/main.yaml
@@ -10,3 +10,20 @@
     name: redis
     state: restarted
   when: not (redis_service_result is defined and redis_service_result.changed)
+
+- name: Start Redis Sentinel
+  service:
+    name: redis
+    state: started
+  register: redis_sentinel_service_result
+
+- name: Restart Redis Sentinel
+  service:
+    name: redis
+    state: restarted
+  when: not (redis_sentinel_service_result is defined and redis_sentinel_service_result.changed)
+
+- name: Stop Redis Sentinel
+  service:
+    name: redis
+    state: started
