--- a/tasks/config.yaml
+++ b/tasks/config.yaml
@@ -12,44 +12,52 @@
     config_filepath: "{{ redis.prefix.config }}/redis.conf"
   notify: Restart Redis
 
-- name: Read Sentinel example config
-  slurp:
-    path: "{{ redis.prefix.config }}/sentinel.conf"
-  register: redis_sentinel_example_config
-  changed_when: false
+- when: redis.replication.sentinel
+  block:
 
-- name: Delete Sentinel example config
-  when: redis_sentinel_example_config.content | b64decode | regex_search('^# Example sentinel.conf')
-  file:
-    path: "{{ redis.prefix.config }}/sentinel.conf"
-    state: absent
+    - name: Read Sentinel example config
+      slurp:
+        path: "{{ redis.prefix.config }}/sentinel.conf"
+      register: redis_sentinel_example_config
+      changed_when: false
 
-- name: Configure Redis Sentinel
-  blockinfile:
-    path: "{{ redis.prefix.config }}/sentinel.conf"
-    block: "{{ redis['sentinel.conf'] }}"
-    create: yes
-    owner: redis
-    group: redis
-    mode: '0644'
-  notify: Restart Redis Sentinel
+    - name: Delete Sentinel example config
+      when: redis_sentinel_example_config.content | b64decode | regex_search('^# Example sentinel.conf')
+      file:
+        path: "{{ redis.prefix.config }}/sentinel.conf"
+        state: absent
 
-- name: Check if Sentinel unit is masked
-  command: systemctl status redis-sentinel
-  register: redis_sentinel_unit
-  changed_when: false
-  failed_when: false
+    - name: Configure Redis Sentinel
+      blockinfile:
+        path: "{{ redis.prefix.config }}/sentinel.conf"
+        block: "{{ redis['sentinel.conf'] }}"
+        create: yes
+        owner: redis
+        group: redis
+        mode: '0644'
+      notify: Restart Redis Sentinel
 
-- name: Unmask sentinel unit to enable starting the service
-  when: '"Loaded: masked" in redis_sentinel_unit.stdout'
-  command: systemctl unmask redis-sentinel
-  notify: Start Redis Sentinel
+    - name: Check if Sentinel unit is masked
+      when: ansible_distribution == 'Ubuntu'
+      command: systemctl status redis-sentinel
+      register: redis_sentinel_unit
+      changed_when: false
+      failed_when: false
 
-- name: Start Sentinel
-  # This was necessary because otherwise the service
-  # was not started, although it should have been
-  when: '"Active: inactive (dead)" in redis_sentinel_unit.stdout'
-  service:
-    name: redis-sentinel
-    state: started
+    - name: Unmask sentinel unit to enable starting the service
+      when:
+        - ansible_distribution == 'Ubuntu'
+        - '"Loaded: masked" in redis_sentinel_unit.stdout'
+      command: systemctl unmask redis-sentinel
+      notify: Start Redis Sentinel
+
+    - name: Start Sentinel
+      # This was necessary because otherwise the service
+      # was not started, although it should have been
+      when:
+        - ansible_distribution == 'Ubuntu'
+      when: '"Active: inactive (dead)" in redis_sentinel_unit.stdout'
+      service:
+        name: redis-sentinel
+        state: started
 
