TASK: Several improvements

--- a/tasks/install.yaml
+++ b/tasks/install.yaml
@@ -1,21 +1,18 @@
----
-- name: Install Redis
-  when: ansible_distribution == 'Ubuntu'
-  apt:
-    name: redis-server
-
-- when:
-    - redis.replication.sentinel
-    - ansible_distribution == 'Ubuntu'
+- when: ansible_distribution == 'Ubuntu'
   block:
-
-    - name: Install Redis Sentinel
+    - name: Install Redis
       apt:
-        name: redis-sentinel
-      register: redis_install_sentinel_apt_result
+        name: redis-server
 
-    - name: Stop Redis Sentinel
-      when: redis_install_sentinel_apt_result.changed
-      service:
-        name: redis-sentinel
-        state: stopped
+    - when: redis.replication.sentinel
+      block:
+        - name: Install Redis Sentinel
+          apt:
+            name: redis-sentinel
+          register: redis_install_sentinel_apt_result
+
+        - name: Stop Redis Sentinel
+          when: redis_install_sentinel_apt_result.changed
+          service:
+            name: redis-sentinel
+            state: stopped
